# pkg/api/health.go
@@ -17,7 +17,7 @@ type HealthResponse struct {
 // @Tags System
 // @Produce json
 // @Success 200 {object} HealthResponse
-// @Router /health [get]
+// @Router /api/v1/health [get]
 func HealthCheckHandler(w http.ResponseWriter, r *http.Request) {
 	response := HealthResponse{
 		Status:    "OK",
